Added in new grid to replace grid-10

--- a/bootstrap_theme/vivato/factory_grid.scss
+++ b/bootstrap_theme/vivato/factory_grid.scss
@@ -1932,6 +1932,168 @@
     }
 }
 
+// start pd-grid-13
+.pd-grid-13 {
+    min-height: 400px;
+    position: relative;
+
+    @media screen and (max-width: 575px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 500px at 130% 0%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 576px) and (max-width: 991px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 850px at 120% 30%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 1000px at 120% 40%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 1200px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 1200px at 110% 30%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    // set the background on the main element
+    background: var(--pd-grid-13-gradient);
+
+    .pd-logo-13-gradient-background {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+        background: var(--pd-grid-13-gradient);
+        -webkit-mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+
+        @media screen and (max-width: 575px) {
+            mask-size: 300px 72px;
+            -webkit-mask-size: 300px 72px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            mask-size: 500px 120px;
+            -webkit-mask-size: 500px 120px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 992px) {
+            mask-size: 800px 192px;
+            -webkit-mask-size: 800px 192px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+    }
+
+    .pd-grid-13-spacer-white {
+        position: relative;
+        z-index: 0;
+        background: white;
+        top: -1px;
+
+        // on some screens there's a small bit of gradient showing through
+        @media screen and (max-width: 575px) {
+            width: 100%;
+            height: 72px;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            width: 100%;
+            height: 120px;
+        }
+
+        @media (min-width: 992px) {
+            width: 100%;
+            height: 192px;
+        }
+    }
+
+    .container {
+        z-index: 3;
+    }
+
+    .pd-grid-13-card-outer {
+        border-radius: $pd-border-radius-sm;
+        width: 100%;
+        background: $pd-black-alpha;
+
+        display: flex;
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+        }
+        
+        @media (min-width: 768px) {
+            flex-direction: row;
+        }
+
+        // *** image ***
+        .pd-grid-13-img-outer {
+            position: relative;
+            border-top-left-radius: $pd-border-radius-sm;
+            overflow: hidden;
+
+            @media screen and (max-width: 767px) {
+                flex: 0 0 240px;
+                border-top-right-radius: $pd-border-radius-sm;
+            }
+            @media (min-width: 768px) and (max-width: 991px) {
+                flex: 0 0 30%;
+                border-bottom-left-radius: $pd-border-radius-sm;
+            }
+
+            @media (min-width: 992px) {
+                flex: 0 0 24%;
+                border-bottom-left-radius: $pd-border-radius-sm;
+            }
+
+        }
+
+        // *** content ***
+        .pd-grid-13-card-content {
+            
+            @media screen and (max-width: 575px) {
+                padding: $pd-block-padding-ex-sm;
+            }
+            @media (min-width: 576px) {
+                padding: $pd-block-padding-sm;
+                
+            }
+        }
+    }
+}
+
 
 
 
