--- a/bootstrap_theme/vivato/factory_sections.scss
+++ b/bootstrap_theme/vivato/factory_sections.scss
@@ -2678,7 +2678,7 @@
         height: 100%;
         width: 100%;
         z-index: 1;
-        background: linear-gradient(rgba($black, 0.65) 0%, rgba($black, 0.4) 20%, rgba($black, 0.4) 80%, rgba($black, 0.65) 100%)
+        background: linear-gradient(rgba($black, 0.65) 0%, rgba($black, 0.4) 20%, rgba($black, 0.4) 80%, rgba($black, 0.65) 100%);
     }
 
     .pd-section-25-card {
