Added in fix for buttons

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -28,7 +28,7 @@ $pd-font-weight-heavy: 500;
 // used for buttons and SEO tags - i.e. intro headings
 $pd-letter-spacing: 0.15em;
 $pd-label-padding: 8px 16px;
-$pd-btn-padding: 8px 18px 8px 16px;
+$pd-btn-padding: 8px 24px 8px 22px; //8px 18px 8px 16px;
 $pd-btn-border: 1px solid $primary;
 $pd-btn-border-inverted: 1px solid $info;
 $pd-btn-border-hover: 1px solid $info;
