--- a/bootstrap_theme/vivato/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/vivato/factory_testimonial_sliders.scss
@@ -1207,11 +1207,20 @@
 // start pd-testimonial-slider-9
 .pd-testimonial-slider-9 {
     .pd-testimonial-slider-9-card-outer {
+        
+        
         p {
             font-weight: $pd-font-weight-light;
-            font-size: $pd-font-lg;
             color: $primary;
             line-height: $pd-line-height-ex-lg;
+        }
+        @media screen and (max-width: 575px) {
+            font-size: $pd-font-md;
+        }
+        
+        @media (min-width: 576px) {
+            font-size: $pd-font-lg;
+
         }
 
         footer p {
