--- a/bootstrap_theme/vivato/factory_footers.scss
+++ b/bootstrap_theme/vivato/factory_footers.scss
@@ -278,6 +278,7 @@
         color: $white;
         margin-bottom: 10px;
         font-size: 0.9rem;
+        max-width: 300px;
     }
 
     .pd-divider {
