--- a/bootstrap_theme/vivato/factory_heroesHalf.scss
+++ b/bootstrap_theme/vivato/factory_heroesHalf.scss
@@ -823,6 +823,24 @@
         // }
     }
 }
+// end pd-heroesHalf-7
+
+// start pd-heroesHalf-8
+.pd-heroesHalf-8 {
+    .pd-heroesHalf-8-img-outer {
+        overflow: hidden;
+
+        @media screen and (max-width: 767px) {
+            min-height: 300px;
+            border-radius: $pd-border-radius-lg $pd-border-radius-lg 0 0;
+        }
+
+        @media (min-width: 768px) {
+            height: 100%;
+            border-radius: 0 $pd-border-radius-lg $pd-border-radius-lg 0;
+        }
+    }
+}
 
 
 
