Added in hero small, summary block and text1

--- a/bootstrap_theme/vivato/factory_heroesHalf.scss
+++ b/bootstrap_theme/vivato/factory_heroesHalf.scss
@@ -550,7 +550,6 @@
 }
 
 // end pd-heroesHalf-6
-
 // start pd-heroesHalf-7
 .pd-heroesHalf-7 {
     // padding-top: $pd-total-nav-height;
@@ -702,12 +701,12 @@
             }
 
             .pd-heroesHalf-7-mobile-outer {
-
                 p {
                     margin-bottom: 0px;
                     font-weight: 300;
 
-                    strong, em {
+                    strong,
+                    em {
                         font-style: normal;
                         font-weight: 800;
                     }
@@ -716,7 +715,6 @@
                 a {
                     color: white;
                 }
-
             }
 
             .pd-heroesHalf-7-notification-header-body-outer {
@@ -823,8 +821,8 @@
         // }
     }
 }
-// end pd-heroesHalf-7
 
+// end pd-heroesHalf-7
 // start pd-heroesHalf-8
 .pd-heroesHalf-8 {
     .pd-heroesHalf-8-img-outer {
@@ -838,6 +836,16 @@
         @media (min-width: 768px) {
             height: 100%;
             border-radius: 0 $pd-border-radius-lg $pd-border-radius-lg 0;
+        }
+
+        .pd-brand-v {
+            @media screen and (max-width: 767px) {
+                border-radius: $pd-border-radius-lg $pd-border-radius-lg 0 0;
+            }
+
+            @media (min-width: 768px) {
+                border-radius: 0 $pd-border-radius-lg $pd-border-radius-lg 0;
+            }
         }
     }
 }
