Added in standard page refinements

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -35,7 +35,7 @@ $pd-btn-border-inverted: 1px solid $info;
 $pd-btn-border-hover: 1px solid $info;
 $pd-btn-border-hover-inverted: 1px solid $info;
 $pd-line-height-lg: 1.4;
-$pd-line-height-ex-lg: 1.5;
+$pd-line-height-ex-lg: 1.7; // was 1.5
 $pd-transition-speed: 0.3s;
 
 // border-radius
